--- a/src/d2dx/d2dx.vcxproj.filters
+++ b/src/d2dx/d2dx.vcxproj.filters
@@ -234,6 +234,9 @@
     <ClInclude Include="IWin32InterceptionHandler.h" />
     <ClInclude Include="RenderContextResources.h" />
     <ClInclude Include="CompatibilityModeDisabler.h" />
+    <ClInclude Include="..\..\thirdparty\stb_image\stb_image_write.h">
+      <Filter>thirdparty\stb_image</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="d2dx.rc" />
@@ -262,6 +265,9 @@
     </Filter>
     <Filter Include="thirdparty\SlashDiablo-HD\D2Patch">
       <UniqueIdentifier>{36595dfa-ea35-4a64-bb2f-0ab0ca7b37e1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="thirdparty\stb_image">
+      <UniqueIdentifier>{99af7b84-eaea-4a5a-aa0e-b4ec344078ad}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
