--- a/src/d2dx/d2dx.vcxproj.filters
+++ b/src/d2dx/d2dx.vcxproj.filters
@@ -93,6 +93,7 @@
     <ClCompile Include="RenderContextResources.cpp" />
     <ClCompile Include="CompatibilityModeDisabler.cpp" />
     <ClCompile Include="SurfaceIdTracker.cpp" />
+    <ClCompile Include="PlayerMotionPredictor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Buffer.h" />
@@ -239,6 +240,7 @@
       <Filter>thirdparty\stb_image</Filter>
     </ClInclude>
     <ClInclude Include="SurfaceIdTracker.h" />
+    <ClInclude Include="PlayerMotionPredictor.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="d2dx.rc" />
