--- a/d2dx-defaults.cfg
+++ b/d2dx-defaults.cfg
@@ -10,6 +10,7 @@
 #
 [window]
 scale=1			# range 1-3, an integer scale factor for the window (in windowed mode)
+position=[-1,-1]	# if [-1,-1] the window will be centered, otherwise placed at the explicit position given here
 
 
 #
