--- a/d2dx-defaults.cfg
+++ b/d2dx-defaults.cfg
@@ -5,17 +5,13 @@
 # and place it in the game folder.
 #
 
-#
-# Window options
-#
 [window]
 scale=1			# range 1-3, an integer scale factor for the window (in windowed mode)
 position=[-1,-1]	# if [-1,-1] the window will be centered, otherwise placed at the explicit position given here
 
+[game]
+size=[-1,-1]		# if [-1,-1] d2dx will decide a suitable game size, otherwise will use the size given here
 
-#
-# Experimental options
-#
 [experimental]
 testmop=false		# if true, enables "high fps" mode
 
