--- a/d2dx-defaults.cfg
+++ b/d2dx-defaults.cfg
@@ -6,8 +6,9 @@
 #
 
 [window]
-scale=1			# range 1-3, an integer scale factor for the window (in windowed mode)
+scale=1			# range 1-3, an integer scale factor for the window
 position=[-1,-1]	# if [-1,-1] the window will be centered, otherwise placed at the explicit position given here
+frameless=false         # if true, the window frame (caption bar etc) will be removed
 
 [game]
 size=[-1,-1]		# if [-1,-1] d2dx will decide a suitable game size, otherwise will use the size given here
