Prepare to enable MoP by default (for 1.13c, 1.13d, 1.14d).

--- a/src/d2dx/d2dx.vcxproj
+++ b/src/d2dx/d2dx.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="Buffer.h" />
     <ClInclude Include="D2DXConfigurator.h" />
     <ClInclude Include="dx256_bmp.h" />
+    <ClInclude Include="ISupportFeature.h" />
     <ClInclude Include="TextMotionPredictor.h" />
     <ClInclude Include="IBuiltinResMod.h" />
     <ClInclude Include="ID2DXContext.h" />
