--- a/src/d2dx/d2dx.vcxproj.filters
+++ b/src/d2dx/d2dx.vcxproj.filters
@@ -143,7 +143,7 @@
     <ClInclude Include="..\..\thirdparty\pocketlzma\pocketlzma.hpp">
       <Filter>thirdparty\pocketlzma</Filter>
     </ClInclude>
-    <ClInclude Include="ISupportFeature.h" />
+    <ClInclude Include="IFeatureFlags.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="d2dx.rc" />
