Add cfg file option for MoP, update example config and readme for release 516.

--- a/d2dx-defaults.cfg
+++ b/d2dx-defaults.cfg
@@ -13,20 +13,18 @@ frameless=false         # if true, the window frame (caption bar etc) will be re
 [game]
 size=[-1,-1]		# if [-1,-1] d2dx will decide a suitable game size, otherwise will use the size given here
 
-[experimental]
-testmop=false		# if true, enables "high fps" mode
-
 
 #
 # Opt-outs from default D2DX behavior
 #
 [optouts]
-noclipcursor=false	# if true, will not lock the mouse cursor to the game window
-nofpsfix=false		# if true, will not apply the basic fps fix (precludes high fps support)
-noresmod=false		# if true, will not apply the built-in D2HD resolution mod (precludes widescreen support)
-nowide=false		# if true, will not choose a widescreen resolution (if noresmod is true, this does nothing)
-nologo=false		# if true, will not display the D2DX logo on the title screen
-novsync=false		# if true, will not use vertical sync
-noaa=false		# if true, will not apply anti-aliasing to jagged edges
-nocompatmodefix=false	# if true, will not block the use of "Windows XP compatibility mode"
-notitlechange=false	# if true, will not change the window title text
+noclipcursor=false	 # if true, will not lock the mouse cursor to the game window
+nofpsfix=false		 # if true, will not apply the basic fps fix (precludes high fps support)
+noresmod=false		 # if true, will not apply the built-in D2HD resolution mod (precludes widescreen support)
+nowide=false		 # if true, will not choose a widescreen resolution (if noresmod is true, this does nothing)
+nologo=false		 # if true, will not display the D2DX logo on the title screen
+novsync=false		 # if true, will not use vertical sync
+noaa=false		 # if true, will not apply anti-aliasing to jagged edges
+nocompatmodefix=false	 # if true, will not block the use of "Windows XP compatibility mode"
+notitlechange=false	 # if true, will not change the window title text
+nomotionprediction=false # if true, will not run the game graphics at high fps
